--- a/LAB WORK/Lab - 05.ipynb
+++ b/LAB WORK/Lab - 05.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -37,9 +37,19 @@
      "output_type": "stream",
      "text": [
       "Items = ['apple', 'ball', 'chalk', 'duster', 'earphone', 'fan', 'gems', 'hat', 'iron', 'jam']\n",
-      "quantity = [5, 2, 4, 0, 5, 2, 5, 3, 6, 8]\n",
-      "price = [9307, 2212, 339, 653, 3037, 1645, 5307, 2104, 2866, 7831]\n",
-      "[['fan', 0, 2866], ['iron', 5, 7831], ['iron', 8, 3037], ['earphone', 8, 9307], ['jam', 8, 7831], ['jam', 2, 7831], ['earphone', 5, 339], ['ball', 2, 7831], ['apple', 2, 9307], ['earphone', 5, 339], ['duster', 4, 339], ['apple', 4, 2212], ['ball', 5, 2866], ['earphone', 5, 5307], ['duster', 0, 7831], ['fan', 2, 2212], ['iron', 5, 339], ['gems', 5, 2866], ['apple', 0, 2104], ['ball', 0, 339], ['hat', 5, 3037], ['earphone', 5, 653], ['iron', 2, 7831], ['fan', 2, 339], ['ball', 2, 9307], ['jam', 5, 5307], ['earphone', 2, 653], ['duster', 5, 5307], ['chalk', 0, 339], ['jam', 8, 7831], ['ball', 8, 653], ['jam', 0, 3037], ['fan', 5, 9307], ['duster', 3, 2866], ['earphone', 5, 3037], ['earphone', 5, 1645], ['fan', 0, 2104], ['apple', 2, 5307], ['duster', 4, 5307], ['gems', 6, 1645], ['duster', 2, 339], ['earphone', 5, 2866], ['earphone', 3, 1645], ['duster', 2, 2866], ['jam', 5, 2212], ['earphone', 2, 9307], ['gems', 6, 9307], ['iron', 4, 5307], ['duster', 2, 2212], ['iron', 8, 2212], ['gems', 2, 9307], ['duster', 5, 7831], ['fan', 4, 653], ['earphone', 2, 2212], ['apple', 2, 1645], ['duster', 8, 5307], ['apple', 2, 2212], ['iron', 2, 1645], ['gems', 2, 5307], ['chalk', 5, 339], ['chalk', 2, 2866], ['gems', 2, 2866], ['earphone', 5, 2104], ['duster', 2, 7831], ['iron', 6, 7831], ['gems', 5, 7831], ['iron', 5, 653], ['duster', 2, 7831], ['ball', 3, 9307], ['iron', 4, 5307], ['jam', 5, 9307], ['ball', 5, 7831], ['iron', 8, 1645], ['apple', 4, 3037], ['gems', 3, 5307], ['gems', 8, 7831], ['apple', 6, 3037], ['apple', 4, 339], ['chalk', 5, 653], ['earphone', 2, 7831], ['duster', 5, 5307], ['gems', 3, 5307], ['fan', 4, 653], ['chalk', 5, 3037], ['apple', 5, 1645], ['hat', 5, 339], ['ball', 3, 5307], ['iron', 2, 1645], ['fan', 5, 9307], ['gems', 2, 7831], ['chalk', 0, 339], ['earphone', 2, 339], ['chalk', 8, 9307], ['chalk', 3, 9307], ['gems', 2, 7831], ['iron', 8, 5307], ['gems', 6, 9307], ['gems', 5, 2104], ['earphone', 2, 2104], ['gems', 2, 5307]]\n"
+      "quantity = [2, 0, 9, 10, 3, 10, 6, 7, 6, 6]\n",
+      "price = [2674, 7251, 8693, 3604, 6860, 6882, 5822, 4154, 5806, 561]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'Total' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[87], line 32\u001b[0m\n\u001b[0;32m     27\u001b[0m         \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m23122013.csv\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m filename:\n\u001b[0;32m     28\u001b[0m             filename\u001b[39m.\u001b[39mwrite(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mthing\u001b[39m}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m{\u001b[39;00mnumber\u001b[39m}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m{\u001b[39;00mcost\u001b[39m}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m{\u001b[39;00mTotal\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 32\u001b[0m cat(thing, number, cost, Total)\n\u001b[0;32m     34\u001b[0m \u001b[39mprint\u001b[39m(random_list,\u001b[39m\"\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39mTotal\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     35\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mthe first 5 are - \u001b[39m\u001b[39m\"\u001b[39m,(random_list[\u001b[39m0\u001b[39m:\u001b[39m6\u001b[39m]))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Total' is not defined"
      ]
     }
    ],
@@ -56,23 +66,143 @@
     "\n",
     "random_list = []\n",
     "\n",
-    "def cat(thing, number, cost):\n",
+    "def cat(thing, number, cost,Total):\n",
     "    for i in range(0,100):\n",
     "        thing = random.choice(items)\n",
     "        number = random.choice(quantity)\n",
     "        cost = random.choice(price)\n",
     "        \n",
-    "        random_item = [thing, number, cost]\n",
+    "\n",
+    "        \n",
+    "        \n",
     "        random_list.append(random_item)\n",
+    "        Total = random_list[1]*random_list[2]\n",
+    "        random_item = [thing, number, cost, Total]\n",
     "        \n",
     "\n",
     "        with open(\"23122013.csv\", \"a\") as filename:\n",
-    "            filename.write(f\"{thing},\\t{number},\\t{cost}\\n\")\n",
+    "            filename.write(f\"{thing},\\t{number},\\t{cost},\\t{Total}\")\n",
+    "            \n",
     "            \n",
     "\n",
-    "cat(thing, number, cost)\n",
+    "cat(thing, number, cost, Total)\n",
     "\n",
+    "print(random_list,\"\\tTotal\")\n",
+    "print(\"the first 5 are - \",(random_list[0:6]))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Items = ['apple', 'ball', 'chalk', 'duster', 'earphone', 'fan', 'gems', 'hat', 'iron', 'jam']\n",
+      "quantity = [2, 3, 0, 3, 8, 7, 10, 6, 7, 8]\n",
+      "price = [9352, 3222, 5560, 4251, 3311, 5979, 9239, 5005, 2182, 8140]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'Total' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[88], line 31\u001b[0m\n\u001b[0;32m     26\u001b[0m         \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m23122013.csv\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39ma\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m filename:\n\u001b[0;32m     27\u001b[0m             filename\u001b[39m.\u001b[39mwrite(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mthing\u001b[39m}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m{\u001b[39;00mnumber\u001b[39m}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m{\u001b[39;00mcost\u001b[39m}\u001b[39;00m\u001b[39m,\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m{\u001b[39;00mTotal\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 31\u001b[0m cat(thing, number, cost, Total)\n\u001b[0;32m     33\u001b[0m \u001b[39mprint\u001b[39m(random_list,\u001b[39m\"\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39mTotal\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     34\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mthe first 5 are - \u001b[39m\u001b[39m\"\u001b[39m,(random_list[\u001b[39m0\u001b[39m:\u001b[39m6\u001b[39m]))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Total' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "items = [\"apple\", \"ball\", \"chalk\", \"duster\", \"earphone\", \"fan\", \"gems\", \"hat\", \"iron\", \"jam\"]\n",
+    "quantity = [random.randint(0, 10) for _ in range(10)]\n",
+    "price = [random.randint(300, 10000) for _ in range(10)]\n",
+    "\n",
+    "print(\"Items =\", items)\n",
+    "print(\"quantity =\", quantity)\n",
+    "print(\"price =\", price)\n",
+    "\n",
+    "random_list = []\n",
+    "\n",
+    "def cat(thing, number, cost,Total):\n",
+    "    for i in range(0,100):\n",
+    "        thing = random.choice(items)\n",
+    "        number = random.choice(quantity)\n",
+    "        cost = random.choice(price) \n",
+    "        Total = random_list[1]*random_list[2]       \n",
+    "        random_item = [thing, number, cost, Total]\n",
+    "        \n",
+    "        random_list.append(random_item)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "\n",
+    "        with open(\"23122013.csv\", \"a\") as filename:\n",
+    "            filename.write(f\"{thing},\\t{number},\\t{cost},\\t{Total}\")\n",
+    "            \n",
+    "            \n",
+    "\n",
+    "cat(thing, number, cost, Total)\n",
+    "\n",
+    "print(random_list,\"\\tTotal\")\n",
+    "print(\"the first 5 are - \",(random_list[0:6]))\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['chalk', 9, 7213, 64917], ['chalk', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['gems', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['ball', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['ball', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['gems', 9, 7213, 64917], ['earphone', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['earphone', 9, 7213, 64917], ['gems', 9, 7213, 64917], ['iron', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['fan', 9, 7213, 64917], ['hat', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['fan', 9, 7213, 64917], ['fan', 9, 7213, 64917], ['chalk', 9, 7213, 64917], ['gems', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['hat', 9, 7213, 64917], ['gems', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['iron', 9, 7213, 64917], ['hat', 9, 7213, 64917], ['duster', 9, 7213, 64917], ['chalk', 9, 7213, 64917], ['ball', 9, 7213, 64917], ['gems', 9, 7213, 64917], ['fan', 9, 7213, 64917], ['ball', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['fan', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['fan', 9, 7213, 64917], ['iron', 9, 7213, 64917], ['earphone', 9, 7213, 64917], ['hat', 9, 7213, 64917], ['ball', 9, 7213, 64917], ['duster', 9, 7213, 64917], ['fan', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['duster', 9, 7213, 64917], ['gems', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['fan', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['earphone', 9, 7213, 64917], ['chalk', 9, 7213, 64917], ['iron', 9, 7213, 64917], ['chalk', 9, 7213, 64917], ['chalk', 9, 7213, 64917], ['earphone', 9, 7213, 64917], ['iron', 9, 7213, 64917], ['duster', 9, 7213, 64917], ['ball', 9, 7213, 64917], ['ball', 9, 7213, 64917], ['fan', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['earphone', 9, 7213, 64917], ['ball', 9, 7213, 64917], ['duster', 9, 7213, 64917], ['duster', 9, 7213, 64917], ['iron', 9, 7213, 64917], ['earphone', 9, 7213, 64917], ['iron', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['chalk', 9, 7213, 64917], ['ball', 9, 7213, 64917], ['iron', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['earphone', 9, 7213, 64917], ['hat', 9, 7213, 64917], ['fan', 9, 7213, 64917], ['chalk', 9, 7213, 64917], ['duster', 9, 7213, 64917], ['ball', 9, 7213, 64917], ['duster', 9, 7213, 64917], ['ball', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['chalk', 9, 7213, 64917], ['apple', 9, 7213, 64917], ['jam', 9, 7213, 64917], ['hat', 9, 7213, 64917], ['earphone', 9, 7213, 64917], ['duster', 9, 7213, 64917], ['earphone', 9, 7213, 64917]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "items = [\"apple\", \"ball\", \"chalk\", \"duster\", \"earphone\", \"fan\", \"gems\", \"hat\", \"iron\", \"jam\"]\n",
+    "quantity = [random.randint(0,10)]\n",
+    "price = [random.randint(300,10000)]\n",
+    "\n",
+    "random_list = []\n",
+    "def cat():\n",
+    "    filename=open(\"23122013.csv\", \"w+\")\n",
+    "    for i in range(100):\n",
+    "        thing = random.choice(items)\n",
+    "        number = random.choice(quantity)\n",
+    "        cost = random.choice(price)\n",
+    "        total = number * cost\n",
+    "        random_item = [thing, number, cost, total]\n",
+    "        random_list.append(random_item)\n",
+    "        filename.write(f\"{thing},\\t{number},\\t{cost},\\t{total}\\n\")\n",
+    "    filename.close()\n",
+    "    return True\n",
+    "cat()\n",
     "print(random_list)\n",
+    "for i in random_list :\n",
+    "    \n",
     "\n"
    ]
   },
